# serializer version: 1
# name: test_category_detail_view_with_tagged_documents[None-category_detail_view_without_active_tag][category_detail_view_without_active_tag]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  </li>
              
          </ol>
      </nav>
  </div>
  
  
              
                  
      
      <section class="s-title-01 mt-lg-5">
      <div class="s-title-01__container container">
          <div class="s-title-01__row row">
              <div class="s-title-01__col col-12">
                  <h1>Test Category</h1>
                  
                  <h2 class="mt-3">Test short description</h2>
              </div>
          </div>
      </div>
  </section>
  
      
          <section class="s-section">
              <div class="s-section__container container">
                  <div class="s-section__row row">
  
      <div class="col-12 col-sm-auto mb-3">
          <div class="d-none d-md-block forum-image mt-3" loading="lazy">
              <img alt="Test Category" class="rounded img-fluid" src="[img src]"/>
          </div>
      </div>
  
  <div class="col-12">
      <article class="textarea_cms_md"><p>Test description</p></article>
  </div>
  </div>
              </div>
          </section>
      
      
          <section class="s-section">
              <div class="s-section__container container">
                  <div class="s-section__row row">
                      <div class="s-section__col col-12">
                          <div class="c-box">
                              <div class="container-fluid d-flex justify-content-center mb-3">Afficher les fiches contenant l'étiquette</div>
                              <div class="container-fluid d-flex justify-content-center">
                                  
                                      
                                          <button aria-label="Filtrer par tag1" class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="document" hx-get="#" hx-swap="outerHTML" hx-target="#documents_area" id="filterdocument-tag1">tag1</button>
                                      
                                  
                                      
                                          <button aria-label="Filtrer par tag2" class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="document" hx-get="#" hx-swap="outerHTML" hx-target="#documents_area" id="filterdocument-tag2">tag2</button>
                                      
                                  
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </section>
      
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12">
                      <div class="row mt-4" id="documents">
                          
                              <div class="col-12 col-md-4 mb-3 mb-md-5">
      <div class="card c-card has-one-link-inside h-100">
          
              <div class="card-header card-header-thumbnail rounded">
                  <img alt="Test Document" class="img-fitcover img-fluid" loading="lazy" src="[img src]"/>
              </div>
          
          <div class="card-body pb-0">
              <p class="h3 lh-base">Test Document</p>
              <div>
                  <span class="tag bg-info-lighter text-info">tag1</span><span class="tag bg-info-lighter text-info">tag2</span>
              </div>
              <div class="mt-3">Test short description</div>
          </div>
          <div class="card-footer text-end">
              
                  <a class="btn btn-sm btn-ico btn-link stretched-link matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="document" href="#">
                      
                      <span>Consulter la fiche</span>
                      <i class="ri-arrow-right-line ri-lg"></i>
                  </a>
              
          </div>
      </div>
  </div>
  
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_category_detail_view_with_tagged_documents[tag1-category_detail_view_with_active_tag][category_detail_view_with_active_tag]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  </li>
              
          </ol>
      </nav>
  </div>
  
  
              
                  
      
      <section class="s-title-01 mt-lg-5">
      <div class="s-title-01__container container">
          <div class="s-title-01__row row">
              <div class="s-title-01__col col-12">
                  <h1>Test Category</h1>
                  
                  <h2 class="mt-3">Test short description</h2>
              </div>
          </div>
      </div>
  </section>
  
      
          <section class="s-section">
              <div class="s-section__container container">
                  <div class="s-section__row row">
  
      <div class="col-12 col-sm-auto mb-3">
          <div class="d-none d-md-block forum-image mt-3" loading="lazy">
              <img alt="Test Category" class="rounded img-fluid" src="[img src]"/>
          </div>
      </div>
  
  <div class="col-12">
      <article class="textarea_cms_md"><p>Test description</p></article>
  </div>
  </div>
              </div>
          </section>
      
      
          <section class="s-section">
              <div class="s-section__container container">
                  <div class="s-section__row row">
                      <div class="s-section__col col-12">
                          <div class="c-box">
                              <div class="container-fluid d-flex justify-content-center mb-3">Afficher les fiches contenant l'étiquette</div>
                              <div class="container-fluid d-flex justify-content-center">
                                  
                                      
                                          <button aria-label="Supprimer ce filtre" class="tag bg-info text-white matomo-event" data-bs-placement="top" data-bs-title="Supprimer ce filtre" data-bs-toggle="tooltip" data-matomo-action="unfilter" data-matomo-category="engagement" data-matomo-option="document" hx-get="#" hx-swap="outerHTML" hx-target="#documents_area" id="filterdocument-tag1">
                                              <i class="ri-close-fill ri-xs"></i>tag1
                                          </button>
                                      
                                  
                                      
                                          <button aria-label="Filtrer par tag2" class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="document" hx-get="#" hx-swap="outerHTML" hx-target="#documents_area" id="filterdocument-tag2">tag2</button>
                                      
                                  
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </section>
      
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12">
                      <div class="row mt-4" id="documents">
                          
                              <div class="col-12 col-md-4 mb-3 mb-md-5">
      <div class="card c-card has-one-link-inside h-100">
          
              <div class="card-header card-header-thumbnail rounded">
                  <img alt="Test Document" class="img-fitcover img-fluid" loading="lazy" src="[img src]"/>
              </div>
          
          <div class="card-body pb-0">
              <p class="h3 lh-base">Test Document</p>
              <div>
                  <span class="tag bg-info-lighter text-info">tag1</span><span class="tag bg-info-lighter text-info">tag2</span>
              </div>
              <div class="mt-3">Test short description</div>
          </div>
          <div class="card-footer text-end">
              
                  <a class="btn btn-sm btn-ico btn-link stretched-link matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="document" href="#">
                      
                      <span>Consulter la fiche</span>
                      <i class="ri-arrow-right-line ri-lg"></i>
                  </a>
              
          </div>
      </div>
  </div>
  
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
# name: test_category_detail_view_with_tagged_documents[unknowntag-category_detail_view_with_unknown_tag][category_detail_view_with_unknown_tag]
  '''
  <main class="s-main" id="main" role="main">
              
                  
              
              
      
  <div class="container">
      <nav aria-label="Fil d'ariane" class="c-breadcrumb">
          <ol class="breadcrumb">
              <li class="breadcrumb-item">Retourner vers</li>
              
                  <li class="breadcrumb-item">
                      <a class="matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="documentation_breadcrumb" href="/documentation/">Documentation</a>
                  </li>
              
          </ol>
      </nav>
  </div>
  
  
              
                  
      
      <section class="s-title-01 mt-lg-5">
      <div class="s-title-01__container container">
          <div class="s-title-01__row row">
              <div class="s-title-01__col col-12">
                  <h1>Test Category</h1>
                  
                  <h2 class="mt-3">Test short description</h2>
              </div>
          </div>
      </div>
  </section>
  
      
          <section class="s-section">
              <div class="s-section__container container">
                  <div class="s-section__row row">
  
      <div class="col-12 col-sm-auto mb-3">
          <div class="d-none d-md-block forum-image mt-3" loading="lazy">
              <img alt="Test Category" class="rounded img-fluid" src="[img src]"/>
          </div>
      </div>
  
  <div class="col-12">
      <article class="textarea_cms_md"><p>Test description</p></article>
  </div>
  </div>
              </div>
          </section>
      
      
          <section class="s-section">
              <div class="s-section__container container">
                  <div class="s-section__row row">
                      <div class="s-section__col col-12">
                          <div class="c-box">
                              <div class="container-fluid d-flex justify-content-center mb-3">Afficher les fiches contenant l'étiquette</div>
                              <div class="container-fluid d-flex justify-content-center">
                                  
                                      
                                          <button aria-label="Filtrer par tag1" class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="document" hx-get="#" hx-swap="outerHTML" hx-target="#documents_area" id="filterdocument-tag1">tag1</button>
                                      
                                  
                                      
                                          <button aria-label="Filtrer par tag2" class="tag bg-info-lighter text-info matomo-event" data-matomo-action="filter" data-matomo-category="engagement" data-matomo-option="document" hx-get="#" hx-swap="outerHTML" hx-target="#documents_area" id="filterdocument-tag2">tag2</button>
                                      
                                  
                              </div>
                          </div>
                      </div>
                  </div>
              </div>
          </section>
      
      <section class="s-section">
          <div class="s-section__container container">
              <div class="s-section__row row">
                  <div class="s-section__col col-12">
                      <div class="row mt-4" id="documents">
                          
                              <div class="col-12 col-md-4 mb-3 mb-md-5">
      <div class="card c-card has-one-link-inside h-100">
          
              <div class="card-header card-header-thumbnail rounded">
                  <img alt="Test Document" class="img-fitcover img-fluid" loading="lazy" src="[img src]"/>
              </div>
          
          <div class="card-body pb-0">
              <p class="h3 lh-base">Test Document</p>
              <div>
                  <span class="tag bg-info-lighter text-info">tag1</span><span class="tag bg-info-lighter text-info">tag2</span>
              </div>
              <div class="mt-3">Test short description</div>
          </div>
          <div class="card-footer text-end">
              
                  <a class="btn btn-sm btn-ico btn-link stretched-link matomo-event" data-matomo-action="view" data-matomo-category="engagement" data-matomo-option="document" href="#">
                      
                      <span>Consulter la fiche</span>
                      <i class="ri-arrow-right-line ri-lg"></i>
                  </a>
              
          </div>
      </div>
  </div>
  
                          
                      </div>
                  </div>
              </div>
          </div>
      </section>
  
              
          </main>
  '''
# ---
